--- a/Template.MobileServer.Frontend/wwwroot/index.html
+++ b/Template.MobileServer.Frontend/wwwroot/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ja">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Template.MobileServer</title>
+    <title>MobileServer</title>
     <base href="/" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="lib/roboto-fontface-material/fonts/roboto-fontface-material.css" rel="stylesheet" />
@@ -28,6 +27,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/Usa.Smart.Blazor/script.min.js"></script>
 </body>
 
 </html>
